--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             if (code) {
                 // Send the code to the Vercel API route
-                fetch('/API/sendCode', {
+                fetch('/api/sendCode', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
