--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Authentication Successful</h1>
-    <p>Your Strava authentication was successful. You can close this window.</p>
+    <p>Your Strava authentication was successful. You can close this window and go back to Whatsapp.</p>
 
     <script>
         window.onload = function() {
